project (aoc)
cmake_minimum_required(VERSION 3.14)
set (CMAKE_CXX_STANDARD 17)

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
	message(STATUS "Made with Linux")
	add_definitions(-DIS_LINUX)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
	message(STATUS "Made with Windows ")
	add_definitions(-DIS_WINDOWS)
else()
	message(STATUS "Made with Mac")
	add_definitions(-DIS_LINUX)
endif()

add_executable(run main.cpp)
